# airflow-dag-anti-pattern-checker

./: README.md  __init__.py  airflow_dag_antipattern_detector_v2.html  pyproject.toml  requirements.txt  streamlit_app.py
airflow_antipattern/: checker.py  cli.py  rules.py
examples/: bad_dag.py  good_dag.py
