[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-antipattern"
version = "0.1.0"
description = "Static analysis linter for Apache Airflow DAGs — catch anti-patterns before they reach production."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
]

[project.scripts]
airflow-antipattern = "airflow_antipattern.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["airflow_antipattern*"]

# ── Default configuration (can be overridden in your project's pyproject.toml) ──
[tool.airflow-antipattern]
severity = "low"          # report all severities by default
# select = []             # uncomment to run only specific rules
# ignore = []             # uncomment to suppress specific rules
# exclude_dirs = ["__pycache__", ".venv", "venv"]
